# stock-picker

./: .env.example  .gitignore  AGENT_PLAN.md  Dockerfile  README.md  agent.py  agent_prompts.py  agent_tools.py  alternative_assets.py  api_server.py  audit_logger.py  backtester.py  chat.py  config.py  data_store.py  discovery_engine.py  embedding_search.py  fetch_financials.py  fetch_index_data.py  fetch_news.py  fetch_nifty500_list.py  fetch_price_data.py  groww_integration.py  intent_classifier.py  main.py  market_intelligence.py  ml_pipeline.py  models.py  nixpacks.toml  portfolio_analyzer.py  price_scheduler.py  pyproject.toml  railway.json  render.yaml  requirements.txt  screener_scraper.py  signal_engine.py  ticker_mapping.py  utils.py
.agents/: ARCHITECTURE.md  OBJECTIVE.md  README.md
.agents/agents/: ai-ml-engineer.md  backend-engineer.md  brainstormer.md  data-engineer.md  frontend-engineer.md  product-manager.md
.agents/context/: codebase-map.md  data-dictionary.md  project-state.md
.agents/memory/: decisions.md  learnings.md  session-log.md
.agents/planning/: ideas.md  roadmap.md  sprint.md  todos.md
.agents/tracking/: data-quality.md  performance.md  tech-debt.md
.claude_agents/: brainstormer.md  elite-backend-engineer.md  frontend-engineer.md  product-manager.md
.claude_skills/create-api/: SKILL.md
.claude_skills/create-component/: SKILL.md
.claude_skills/create-landing/: SKILL.md
.claude_skills/debug-detective/: SKILL.md
api_routes/: __init__.py  admin.py  auth.py  chat.py  discovery.py  signals.py  stocks.py  user.py
web/: package-lock.json  package.json
(+35 files in other folders)
